--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -4,3 +4,6 @@
   border-radius: 25px;
   font-size: 16px;
 }
+.verify-email-container {
+  margin-top: 100px; /* Adjust the margin top as needed to position the Verifyemail component below the Navbar */
+}
